--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 #top-nav {
   background-color: #2c3e50;
   height: 80px;
@@ -26,5 +30,9 @@
 }
 
 #about {
+  background-color: #1abc9c;
+}
+
+#send_form {
   background-color: #1abc9c;
 }
