--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,19 @@ body {
   background-color: #ccb2a3;
 }
 
-#about {
+#about,
+#send_form {
   background-color: #1abc9c;
 }
 
-#send_form {
-  background-color: #1abc9c;
+#footer_boostrap {
+  color: #1abc9c;
+}
+
+#location {
+  background-color: #3a546d;
+}
+
+#copyright {
+  background-color: #2c3e50;
 }
