--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
   overflow-x: hidden;
 } */
 
+.btn-primary {
+  background-color: #1abc9c;
+  border: 1px solid white;
+}
+
 #top-nav {
   background-color: #2c3e50;
   height: 80px;
